<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                tools:context=".ActividadDatos">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="80dp"
                    android:layout_height="31dp"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:text="@string/datos"
                    android:textColor="#F44336"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/id_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/id_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/fecha"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/color_favorito"
                    android:textColor="#E91E63"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/sexo"
                    android:textColor="#9C27B0"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioSex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinner">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Masculino"
                        android:textSize="20dp" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="158dp"
                        android:layout_height="wrap_content"
                        android:text="Femenino"
                        android:textSize="20dp" />
                </RadioGroup>

                <Button
                    android:id="@+id/btn_ingresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="0dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ingresar" />

            </LinearLayout>
        </ScrollView>
</FrameLayout>
